# nieruchomosci-ados

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.ai/agent/: pm-instructions.md  pr-instructions.md
.ai/rules/: README.md
.github/workflows/: ci.yml  preview-cleanup.yml  preview-deploy.yml
doc/: 00-index.md  documentation-handbook.md
doc/changes/2026-06/2026-06-21--STORY-23--redis-cache-properties-list/: chg-STORY-23-plan.md  chg-STORY-23-spec.md
doc/changes/2026-06/2026-06-22--STORY-24--cache-invalidation-property-upsert/: chg-STORY-24-plan.md  chg-STORY-24-spec.md
doc/changes/2026-06/2026-06-24--STORY-27--graceful-fallback-redis-unavailable/: chg-STORY-27-plan.md  chg-STORY-27-pm-notes.yaml  chg-STORY-27-spec.md
doc/changes/STORY-1/: chg-STORY-1-plan.md  chg-STORY-1-spec.md
doc/changes/STORY-2/: chg-STORY-2-plan.md  chg-STORY-2-spec.md
doc/changes/STORY-6/: chg-STORY-6-plan.md  chg-STORY-6-spec.md
doc/decisions/: 00-index.md  README.md
doc/guides/: change-lifecycle.md  copywriting.md  decision-records-management.md  developer-setup.md  onboarding-existing-project.md  opencode-agents-and-commands-guide.md  opencode-model-configuration.md  system-dependencies.md  tools-convention.md  unified-change-convention-tracker-agnostic-specification.md
doc/overview/: 01-north-star.md  02-architecture.md  08-caching-storage.md
doc/planning/: backlog.md
doc/spec/features/: feature-scrapper-base.md
doc/templates/: README.md  change-spec-template.md  decision-record-template.md  feature-spec-template.md  implementation-plan-template.md  north-star-template.md  pr-instructions-template.md  test-plan-template.md  test-spec-template.md
docker/alertmanager/: alertmanager.yml
docker/grafana/dashboards/: dashboards.yml  scrapers-overview.json
docker/grafana/datasources/: prometheus.yml
docker/postgres/init/: 01-extensions.sql
docker/prometheus/: alert-rules.yml  prometheus.yml
k8s/app/: fastapi-deployment.yaml  services.yaml
k8s/argocd/: app-of-apps.yaml
k8s/argocd/applications/: backend-app.yaml
scripts/: verify-grafana.sh
specs/: AGENTS.md
specs/docs/: specification.md
specs/specs/: 000-INDEX.md  010-VISION.md  020-ARCHITECTURE.md  030-USER-STORIES.md  040-ACCEPTANCE-CRITERIA.md  050-USER-JOURNEYS.md  060-SCRAPER-BASE.md  070-DATABASE.md  080-API.md  090-FRONTEND.md  100-MAP.md  110-I18N-CURRENCY.md  120-CACHING-STORAGE.md  130-MONITORING-ALERTS.md  140-GITOPS-CICD.md  150-SCALING.md  160-SPRINT-PLAN.md  170-RISKS-COSTS.md
src/otodom-scrapper/: pyproject.toml  scrapy.cfg
src/otodom-scrapper/otodom_scrapper/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py  stealth_utils.py
src/otodom-scrapper/otodom_scrapper/spiders/: __init__.py  otodom.py
src/otodom-scrapper/tests/: __init__.py  conftest.py  test_dependencies.py  test_pipeline.py  test_real_fixtures.py  test_spider.py
src/otodom-scrapper/tests/otodom-search-results/: search-results-with-photos.html
src/real-estate-api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
src/real-estate-api/app/: __init__.py  database.py  main.py
src/real-estate-api/app/core/: __init__.py  config.py  metrics.py
src/real-estate-api/app/routers/: cities.py  health.py  photos.py  properties.py  readiness.py
src/real-estate-api/app/schemas/: __init__.py  city.py  common.py  property.py
src/real-estate-api/app/services/: __init__.py  cache_key.py  cache_service.py  photo_upload_service.py  property_service.py  redis_client.py  stream_manager.py
src/real-estate-api/app/workers/: __init__.py  alert_worker.py
src/real-estate-api/tests/: __init__.py  conftest.py  test_app.py  test_cache_key.py  test_cache_service.py  test_cities.py  test_health.py  test_photo_upload.py  test_photo_upload_service.py  test_photos.py  test_properties.py  test_redis_client.py  test_stream_manager.py
src/scrapper-base/: CHANGELOG.md  README.md  alembic.ini  pyproject.toml
src/scrapper-base/alembic/: env.py  script.py.mako
src/scrapper-base/alembic/versions/: 0001_create_core_tables.py  0002_create_photo_assets_table.py
src/scrapper-base/src/scraper_base/: __init__.py  cache_invalidator.py  database.py  db_utils.py  logging_config.py  metrics.py  models.py  pipeline.py  services.py  storage.py  stream_publisher.py
src/scrapper-base/tests/: __init__.py  conftest.py  test_cache_invalidator.py  test_database.py  test_infrastructure.py  test_logging.py  test_metrics.py  test_models.py  test_photo_processor.py  test_pipeline.py  test_services.py  test_storage.py  test_stream_publisher.py  test_thumbnail_processor.py
(+61 files in other folders)
