[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-api"
version = "0.1.0"
description = "FastAPI REST API for the Real Estate Aggregation Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "rendenwald" },
]

dependencies = [
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "redis>=5.0,<6.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "prometheus-client>=0.20,<1.0",
    "structlog>=24.0,<25.0",
    "geoalchemy2>=0.15,<1.0",
    "scrapper-base",
]

[tool.uv.sources]
scrapper-base = { path = "../scrapper-base", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "fakeredis[lua]>=2.20,<3.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
