[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapper-base"
version = "0.1.0"
description = "Shared infrastructure for portal-specific real estate scrapers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "rendenwald" },
]

dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "scrapy>=2.11,<3.0",
    "prometheus-client>=0.20,<1.0",
    "structlog>=24.0,<25.0",
    "minio>=7.2,<8.0",
    "pydantic>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "geoalchemy2>=0.15,<1.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "aiosqlite>=0.20,<1.0",
    "fakeredis[lua]>=2.20,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["scraper_base*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
# Test files: relax strict rules that are overly verbose for test code
# - no-untyped-def: test function signatures don't always need return types
# - type-arg: dict/list generic args not required in test annotations
# - unused-ignore: stale ignore comments from earlier development
disable_error_code = [
    "no-untyped-def",
    "type-arg",
    "unused-ignore",
    "no-any-return",
    "method-assign",
    "attr-defined",
    "comparison-overlap",
    "assignment",
    "misc",
    "no-untyped-call",
    "abstract",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
